--- a/HW_Lesson2.ipynb
+++ b/HW_Lesson2.ipynb
@@ -445,7 +445,7 @@
     "            print(\n",
     "                f'Stop descent! iteration: {n_iter}, weights: {W}, mse: {min_err}')\n",
     "            stop_chek = False\n",
-    "        W -= alpha * (1 / n * 2 * np.sum(X.T * (y_pred - y), axis=1)+lambda_*W)# добавим коэфф. лямбда для расчёта весов\n",
+    "        W -= alpha * (1 / n * 2 * np.sum(X.T * (y_pred - y), axis=1))+lambda_*W # добавим коэфф. лямбда для расчёта весов\n",
     "        if verbose:\n",
     "            if n_iter % 1000 == 0:\n",
     "                print(n_iter, W, err)\n",
@@ -509,7 +509,7 @@
     "            y_tmp = y[start_: end_]\n",
     "            y_pred = W @ X_tmp\n",
     "            err = calc_mse(y_tmp, y_pred)+lambda_*euclid(W) # добавляем в расчет ошибки фактор L2 регуляризации\n",
-    "            W -= alpha * (1 / n * 2 * (y_pred - y_tmp) @ X_tmp.T+lambda_*W)\n",
+    "            W -= alpha * (1 / n * 2 * (y_pred - y_tmp) @ X_tmp.T)+lambda_*W\n",
     "        errors.append(err)\n",
     "        if verbose:\n",
     "            if n_iter % 1000 == 0:\n",
@@ -882,7 +882,7 @@
     "            print(\n",
     "                f'Stop descent! iteration: {n_iter}, weights: {W}, mse: {min_err}')\n",
     "            stop_chek = False\n",
-    "        W -= alpha * (1 / n * 2 * np.sum(X.T * (y_pred - y), axis=1)+lambda_*W)\n",
+    "        W -= alpha * (1 / n * 2 * np.sum(X.T * (y_pred - y), axis=1))+lambda_*W\n",
     "        if verbose:\n",
     "            if n_iter % 1000 == 0:\n",
     "                print(n_iter, W, err)\n",
@@ -953,7 +953,7 @@
     "            y_tmp = y[start_: end_]\n",
     "            y_pred = W @ X_tmp\n",
     "            err = calc_mse(y_tmp, y_pred)+lambda_*reg_elem(W)  # добавляем в расчет ошибки выбранный фактор регуляризации\n",
-    "            W -= alpha * (1 / n * 2 * (y_pred - y_tmp) @ X_tmp.T+lambda_*W)\n",
+    "            W -= alpha * (1 / n * 2 * (y_pred - y_tmp) @ X_tmp.T)+lambda_*W\n",
     "        errors.append(err)\n",
     "        if verbose:\n",
     "            if n_iter % 1000 == 0:\n",
